--- a/styles/custom-bootstrap/_text.scss
+++ b/styles/custom-bootstrap/_text.scss
@@ -30,7 +30,7 @@ $text-transform: (
 
 @for $size from 12 through 24 {
   .font-size-#{$size} {
-    font-size: #{$size}px;
+    font-size: #{$size}px !important;
   }
 }
 
