KAM-100: [FE] Page `Player profile` Added layouts Added `personal-stats` section

--- a/styles/colors.scss
+++ b/styles/colors.scss
@@ -64,16 +64,16 @@ $yellow-color-1-darken: darken($yellow-color-1, 5%);
 $yellow-color-2: #fff2b2;
 $yellow-color-2-lighten: lighten($yellow-color-2, 5%);
 $yellow-color-2-darken: darken($yellow-color-2, 5%);
-$yellow-color-3: #ffe97f;
+$yellow-color-3: #e7d373;
 $yellow-color-3-lighten: lighten($yellow-color-3, 5%);
 $yellow-color-3-darken: darken($yellow-color-3, 5%);
-$yellow-color-4: #ffe14c;
+$yellow-color-4: #d0b73e;
 $yellow-color-4-lighten: lighten($yellow-color-4, 5%);
 $yellow-color-4-darken: darken($yellow-color-4, 5%);
-$yellow-color-5: #ffd819;
+$yellow-color-5: #ccac14;
 $yellow-color-5-lighten: lighten($yellow-color-5, 5%);
 $yellow-color-5-darken: darken($yellow-color-5, 5%);
-$yellow-color-6: #ffd400;
+$yellow-color-6: #c2a203;
 $yellow-color-6-lighten: lighten($yellow-color-6, 5%);
 $yellow-color-6-darken: darken($yellow-color-6, 5%);
 
