--- a/src/app/pages/main/pages/profile/profile.component.scss
+++ b/src/app/pages/main/pages/profile/profile.component.scss
@@ -1,6 +1,7 @@
 @use 'styles/colors' as var;
 
 .section {
+  overflow: hidden;
   border: 1px solid var.$grey-color-3;
   background-color: var.$grey-color-1-lighten;
   min-height: 100%;
