--- a/styles/colors.scss
+++ b/styles/colors.scss
@@ -134,6 +134,25 @@ $blue-color-6: #0d47a1;
 $blue-color-6-lighten: lighten($blue-color-6, 5%);
 $blue-color-6-darken: darken($blue-color-6, 5%);
 
+$sky-blue-color-1: #eefafc;
+$sky-blue-color-1-lighten: lighten($sky-blue-color-1, 5%);
+$sky-blue-color-1-darken: darken($sky-blue-color-1, 5%);
+$sky-blue-color-2: #a8e5f0;
+$sky-blue-color-2-lighten: lighten($sky-blue-color-2, 5%);
+$sky-blue-color-2-darken: darken($sky-blue-color-2, 5%);
+$sky-blue-color-3: #62d1e4;
+$sky-blue-color-3-lighten: lighten($sky-blue-color-3, 5%);
+$sky-blue-color-3-darken: darken($sky-blue-color-3, 5%);
+$sky-blue-color-4: #2ec1dc;
+$sky-blue-color-4-lighten: lighten($sky-blue-color-4, 5%);
+$sky-blue-color-4-darken: darken($sky-blue-color-4, 5%);
+$sky-blue-color-5: #1e99ae;
+$sky-blue-color-5-lighten: lighten($sky-blue-color-5, 5%);
+$sky-blue-color-5-darken: darken($sky-blue-color-5, 5%);
+$sky-blue-color-6: #156b7a;
+$sky-blue-color-6-lighten: lighten($sky-blue-color-6, 5%);
+$sky-blue-color-6-darken: darken($sky-blue-color-6, 5%);
+
 $violet-color-1: #dec9e9;
 $violet-color-1-lighten: lighten($violet-color-1, 5%);
 $violet-color-1-darken: darken($violet-color-1, 5%);
